squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-squirrel_repo-hello.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
num_locals: 1
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Literal:
                        String: Hello World!
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
