squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-squirrel_repo-tailstate.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - statethread
    - 1
  - - i
    - 2
num_locals: 3
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - state1
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 0
                      default_expr: []
                      local_names: []
                      num_locals: 0
                      upvalues: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - suspend
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Literal:
                                              String: state1
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - data:
                                Return:
                                  data:
                                    FunctionCall:
                                      func:
                                        Expr:
                                          data:
                                            Ident: state2
                                          span:
                                            start: Start
                                            end: End
                                      args: []
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - state2
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 0
                      default_expr: []
                      local_names: []
                      num_locals: 0
                      upvalues: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - suspend
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Literal:
                                              String: state2
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - data:
                                Return:
                                  data:
                                    FunctionCall:
                                      func:
                                        Expr:
                                          data:
                                            Ident: state3
                                          span:
                                            start: Start
                                            end: End
                                      args: []
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - state3
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 0
                      default_expr: []
                      local_names: []
                      num_locals: 0
                      upvalues: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - suspend
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Literal:
                                              String: state3
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - data:
                                Return:
                                  data:
                                    FunctionCall:
                                      func:
                                        Expr:
                                          data:
                                            Ident: state1
                                          span:
                                            start: Start
                                            end: End
                                      args: []
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionCall:
                      func:
                        FieldAccess:
                          - data: Globals
                            span:
                              start: Start
                              end: End
                          - - newthread
                            - start: Start
                              end: End
                      args:
                        - data:
                            Ident: state1
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            FunctionCall:
                              func:
                                FieldAccess:
                                  - data:
                                      Local:
                                        - 1
                                        - start: Start
                                          end: End
                                    span:
                                      start: Start
                                      end: End
                                  - - call
                                    - start: Start
                                      end: End
                              args: []
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          For:
            for_kw:
              start: Start
              end: End
            init:
              data:
                Expr:
                  data:
                    Assign:
                      target:
                        Local:
                          - 2
                          - start: Start
                            end: End
                      value:
                        data:
                          Literal:
                            Integer: 0
                        span:
                          start: Start
                          end: End
                      kind: Normal
                      op_span:
                        start: Start
                        end: End
                  span:
                    start: Start
                    end: End
              span:
                start: Start
                end: End
            cond:
              data:
                BinaryOp:
                  op: Less
                  op_span:
                    start: Start
                    end: End
                  lhs:
                    data:
                      Local:
                        - 2
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
                  rhs:
                    data:
                      Literal:
                        Integer: 10000
                    span:
                      start: Start
                      end: End
              span:
                start: Start
                end: End
            incr:
              data:
                Expr:
                  data:
                    UnaryRefOp:
                      - PostIncr
                      - start: Start
                        end: End
                      - Local:
                          - 2
                          - start: Start
                            end: End
                  span:
                    start: Start
                    end: End
              span:
                start: Start
                end: End
            body:
              data:
                Expr:
                  data:
                    FunctionCall:
                      func:
                        FieldAccess:
                          - data: Globals
                            span:
                              start: Start
                              end: End
                          - - print
                            - start: Start
                              end: End
                      args:
                        - data:
                            BinaryOp:
                              op: Add
                              op_span:
                                start: Start
                                end: End
                              lhs:
                                data:
                                  FunctionCall:
                                    func:
                                      FieldAccess:
                                        - data:
                                            Local:
                                              - 1
                                              - start: Start
                                                end: End
                                          span:
                                            start: Start
                                            end: End
                                        - - wakeup
                                          - start: Start
                                            end: End
                                    args: []
                                span:
                                  start: Start
                                  end: End
                              rhs:
                                data:
                                  Literal:
                                    String: "\n"
                                span:
                                  start: Start
                                  end: End
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
              span:
                start: Start
                end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
