squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-verify-lexical_structure-literals.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - int_b10
    - 1
  - - int_hex
    - 2
  - - int_oct
    - 3
  - - int_char
    - 4
  - - float
    - 5
  - - float_sci
    - 6
  - - float_sci2
    - 7
  - - str
    - 8
  - - str_verb
    - 9
  - - str_verb_multi
    - 10
num_locals: 11
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - println
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 1
                      default_expr: []
                      local_names:
                        - - val
                          - 0
                      num_locals: 1
                      upvalues: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - print
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            BinaryOp:
                                              op: Add
                                              op_span:
                                                start: Start
                                                end: End
                                              lhs:
                                                data:
                                                  Local:
                                                    - 0
                                                    - start: Start
                                                      end: End
                                                span:
                                                  start: Start
                                                  end: End
                                              rhs:
                                                data:
                                                  Literal:
                                                    String: "\n"
                                                span:
                                                  start: Start
                                                  end: End
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 34
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 1
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 4278231328
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 2
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 3
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 491
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 3
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 4
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 97
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 4
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 5
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Number: 1.52
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 5
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 6
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Number: 0.01
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 6
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 7
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Number: 120
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 7
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 8
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      String: "I'm a string"
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 8
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 9
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      String: "I'm a verbatim string"
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 9
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 10
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      String: "I'm a verbatim string\nthat spans multiple lines"
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: println
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Local:
                        - 10
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
