squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-verify-metamethods-classes.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
locals:
  - NamedReg: vargv
is_varargs: true
body:
  data:
    Block: []
  span:
    start: Start
    end: End
